namespace PushAlertsApi.Models
{
    public enum TaskState
    {
        Opened,
        Assigned,
        Done,
        Rejected,
    }
}